Replace local images with S3 URLs

--- a/docs/contributing/documentation.mdx
+++ b/docs/contributing/documentation.mdx
@@ -14,7 +14,7 @@ You can create a pull request or an issue for any page, directly from this websi
 There are two icons on the top right corner of each page. The left one is for opening a pull request and the right one is for opening an issue.
 
 <Frame caption="Cosine distance of embeddings from initial embeddings as they are being learnt with time.">
-  <img width="800" src="/images/edit-tools.png"/>
+  <img width="800" src="https://uptrain-demo.s3.us-west-1.amazonaws.com/contributing/edit-tools.png"/>
 </Frame>
 
 This is convenient for small changes where you don't need to clone the repository and run the website locally.
