--- a/docs/monitors/concept-drift.mdx
+++ b/docs/monitors/concept-drift.mdx
@@ -37,5 +37,5 @@ We recommend checking out the [fraud detection example](https://github.com/uptra
 Further, UpTrain automatically sends an alert (which can be integrated with Slack or E-mail) when concept drift is detected, as shown below:
 
 <Frame caption="A model degradation alert sent by UpTrain">
-  <img width="500" src="/images/model-degradation-alert.png"/>
+  <img width="500" src="https://uptrain-demo.s3.us-west-1.amazonaws.com/fraud_detection/model-degradation-alert.png"/>
 </Frame>
