--- a/docs/monitors/model-bias.mdx
+++ b/docs/monitors/model-bias.mdx
@@ -18,7 +18,7 @@ check_popularity_bias = {
 With popularity bias added in the check, we obtain the following histogram of the frequency of predicted items versus their popularity. Most predicted items have low popularity, implying low popularity bias.
 
 <Frame caption="A histogram of the frequency of predicted items versus their popularity. Most predicted items have low popularity, implying low popularity bias">
-  <img width="500" src="/images/model-bias-frequency-histogram.png"/>
+  <img width="500" src="https://uptrain-demo.s3.us-west-1.amazonaws.com/shppoing_cart_rec/model-bias-frequency-histogram.png"/>
 </Frame>
 
 UpTrain provides several tools to monitor and detect model bias. One of the most common methods is to compare the predictions with the actual user feedback or ground truth. The accuracy of the model's predictions can be measured using standard metrics such as precision, recall, and F1 score. The metrics can help detect bias in predictions, such as if the system is recommending only popular items.
@@ -42,7 +42,7 @@ where `cosine_dist_init` and `cosine_distance_check` were custom-defined by the 
 In the obtained dashboard, we observe that a lot of them have zero cosine distance (implying that the recommendations were spot on). Also, we observe that the predictions are concentrated around the low cosine distance (< 0.4) space.
 
 <Frame caption="Cosine distances of the predicitons">
-  <img width="500" src="/images/model-bias-cosine-distance.png"/>
+  <img width="500" src="https://uptrain-demo.s3.us-west-1.amazonaws.com/shppoing_cart_rec/model-bias-cosine-distance.png"/>
 </Frame>
 
 Overall, UpTrain provides a range of tools to monitor and detect recommendation bias in a recommender system. These tools can help improve the fairness and accuracy of the system, and ultimately enhance the user experience.
