Update docs media (#200)
* Replace demo gif with mp4

* Add video tag

* Update README.md

* Temporary file upload

* Update file

* Remove temporary file

* Replace local image with s3 link

* Update README.md

* Update edge-case-detection.mdx

* Replace local images with S3 URLs

--- a/docs/monitors/edge-case-detection.mdx
+++ b/docs/monitors/edge-case-detection.mdx
@@ -5,9 +5,11 @@ description: Detect outliers in your production data
 
 Edge case detection is a crucial aspect of monitoring machine learning models, as it allows users to identify and handle data points that fall outside the typical range of values. These edge cases can be challenging for a machine learning model to predict accurately, and UpTrain provides a robust framework for identifying and handling these cases to improve the model.
 
-We recommend checking out the The Data Integrity Monitor in UpTrain checks for issues such as missing or corrupted data, incorrect data types, and outliers. It takes as input the dataset used by the model and performs checks to identify potential issues. Following is an example of a data integrity check taken from the [human orientation classification](https://github.com/uptrain-ai/uptrain/blob/main/examples/human_orientation_classification/run.ipynb) example:
+We recommend checking out the [Data Integrity Monitor](/monitors/data-integrity) for issues such as missing or corrupted data, incorrect data types, and outliers. It takes as input the dataset used by the model and performs checks to identify potential issues. You can find below an example of how to use the Data Integrity Monitor to detect edge cases in your production data. 
 
-example to see edge case detection in action. In our [quickstart tutorial](#TODO), we looked at the data drift for this problem, where we realized that pushup positions in human orientation were not a part of the training data, but the model is seeing in production. Thus, in this config, we define a custom edge case where we want to specifically catch pushup position data points so that we can annotate them and retrain our model on them later. The following is how the config looks like
+## Example to see edge case detection in action
+
+In the [human orientation classification](https://github.com/uptrain-ai/uptrain/blob/main/examples/human_orientation_classification/run.ipynb) example, we looked at the data drift. We realized that pushup positions in human orientation were not a part of the training data, but the model is seeing in production. Thus, in this config, we define a custom edge case where we want to specifically catch pushup position data points so that we can annotate them and retrain our model on them later. The following is how the config looks like
 
 ```python
 # Use the custom-defined pushup edge-case signal
@@ -33,7 +35,7 @@ Here, we have defined another edge-case signal which checks for whether the mode
 Applying an edge case monitor on the above dataset yielded the edge case clusters with centroids and their support as shown in the image below. As we can see, the clusters that are close to the pushup position are most frequent, which implies that our edge detection technique is working as expected.
 
 <Frame caption="Edge cases clusters selected by the framework. Pushup orientations are most prominent.">
-  <img width="500" src="/images/edge-case-clusters.png"/>
+  <img width="500" src="https://uptrain-demo.s3.us-west-1.amazonaws.com/human_orientation_classification/edge-case-clusters.png"/>
 </Frame>
 
 UpTrain employs a combination of user-defined signals and statistical techniques, such as outlier detection, to identify edge cases. Users can define their own signals based on their domain expertise, which may include features such as the time of day or user behavior patterns. Additionally, we plan to include several built-in statistical techniques for outlier detection, such as [Tukey's fences](https://github.com/uptrain-ai/uptrain/issues/100) and [Z-score](https://github.com/uptrain-ai/uptrain/issues/101).
