Feature/automated finetuning (#211)
* Adding automated finetuning

* bert finetuning

* blog readme update

* bug fixes

---------

Co-authored-by: Vipul Gupta <vipgupta84@gmail.com>

--- a/examples/automated_finetuning/bert_finetuning_ww.ipynb
+++ b/examples/automated_finetuning/bert_finetuning_ww.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "bf39670a-5863-41ce-a41b-78cfc305486f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d8041ded-5129-4875-83b1-a1bf08dd0eff",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "PyTorch is available but CUDA is not. Defaulting to SciPy for SVD\n"
+      "/Users/suyashharlalka/miniconda3/envs/ml/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "PyTorch is available but CUDA is not. Defaulting to NumPy for SVD\n"
      ]
     }
    ],
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "1dabb361-b866-4a70-851a-f9fcb902c06e",
    "metadata": {},
    "outputs": [],
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "c83b0b93-646b-4646-9575-dd1484cc7a73",
    "metadata": {},
    "outputs": [],
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "272f2e3a-6268-4727-8a17-de932c203ba7",
    "metadata": {},
    "outputs": [
@@ -163,7 +165,7 @@
        "4      0  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "2e2a54af-a533-44d0-8043-03dbdcc3f699",
    "metadata": {},
    "outputs": [],
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "26f092c6-7566-4b36-aa64-49ce6fc9e1b3",
    "metadata": {},
    "outputs": [
@@ -211,10 +213,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassificationWithIntermediateLayer: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassificationWithIntermediateLayer: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
       "- This IS expected if you are initializing BertForSequenceClassificationWithIntermediateLayer from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassificationWithIntermediateLayer from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassificationWithIntermediateLayer were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'post_bert.bias', 'post_bert.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassificationWithIntermediateLayer were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['post_bert.bias', 'classifier.weight', 'post_bert.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
      ]
@@ -222,26 +224,20 @@
    ],
    "source": [
     "model = BertForSequenceClassificationWithIntermediateLayer.from_pretrained('bert-base-uncased', num_labels = 2)\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device = ('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "if device == 'cpu':\n",
+    "    # check for mps\n",
+    "    if torch.backends.mps.is_available():\n",
+    "        device = 'mps'\n",
+    "        \n",
     "device = torch.device(device)\n",
     "model.to(device)\n",
-    "# optimizer = torch.optim.AdamW(\n",
-    "#                         model.parameters(), \n",
-    "#                           lr = 2e-5,\n",
-    "#                           )\n",
-    "# val_ratio = 0.2\n",
-    "# labels = df.label.values\n",
-    "# train_idx, val_idx = train_test_split(\n",
-    "#     np.arange(len(labels)),\n",
-    "#     test_size = val_ratio,\n",
-    "#     shuffle = True,\n",
-    "#     stratify = labels)\n",
     "train_dataloader, val_dataloader = get_train_val_dataloader(df, batch_size=32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "64cc28a8-c63e-42cb-8f23-7db2842844f5",
    "metadata": {},
    "outputs": [
@@ -269,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "0636bed0-5293-4b50-8aff-deb1d3af6237",
    "metadata": {},
    "outputs": [],
@@ -279,9 +275,9 @@
     "    'optimizer': torch.optim.AdamW,\n",
     "    'train_dataloader': train_dataloader,\n",
     "    'val_dataloader': val_dataloader,\n",
-    "      \n",
+    "    'device': device,\n",
     "    # Define the list of new layers that were added\n",
-    "    'layers': [219],\n",
+    "    'layers': [230],\n",
     "    'is_automated': False,\n",
     "    'epochs': 2,\n",
     "    }],\n",
@@ -292,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "2296328f-5645-4aba-aa9c-5d9ae291a40c",
    "metadata": {},
    "outputs": [
@@ -303,6 +299,20 @@
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  👋 Welcome to Streamlit!\n",
+      "\n",
+      "  If you’d like to receive helpful onboarding emails, news, offers, promotions,\n",
+      "  and the occasional swag, please enter your email address below. Otherwise,\n",
+      "  leave this field blank.\n",
+      "\n",
+      "  Email:  "
+     ]
     }
    ],
    "source": [
@@ -311,40 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9ee294d0-6ce6-4e4d-983e-12dc7f0ee427",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.6.64:8501\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "framework.log(inputs={'model': [model]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "4296485e-20d1-4055-b92d-508d26b35458",
    "metadata": {},
    "outputs": [
@@ -352,10 +339,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassificationWithIntermediateLayer: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassificationWithIntermediateLayer: ['cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassificationWithIntermediateLayer from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassificationWithIntermediateLayer from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassificationWithIntermediateLayer were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'post_bert.bias', 'post_bert.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassificationWithIntermediateLayer were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['post_bert.bias', 'post_bert.weight', 'classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -373,7 +360,7 @@
        "[0]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
