Revert "Update required packages for ride time estimation"
This reverts commit ed64f98f5a188af3fcdb6d8e3972dd367ba2bc29.

--- a/examples/ride_time_estimation/run.ipynb
+++ b/examples/ride_time_estimation/run.ipynb
@@ -46,43 +46,9 @@
    "execution_count": 1,
    "id": "e9f1890c-6662-4a4d-a900-8d0dd5850653",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: lightgbm in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (3.3.5)\n",
-      "Requirement already satisfied: matplotlib in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (3.7.1)\n",
-      "Requirement already satisfied: shap in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (0.41.0)\n",
-      "Requirement already satisfied: scikit-learn!=0.22.0 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from lightgbm) (1.2.2)\n",
-      "Requirement already satisfied: numpy in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from lightgbm) (1.23.5)\n",
-      "Requirement already satisfied: scipy in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from lightgbm) (1.10.1)\n",
-      "Requirement already satisfied: wheel in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from lightgbm) (0.40.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from matplotlib) (23.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from matplotlib) (4.39.3)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from matplotlib) (3.0.9)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from matplotlib) (1.0.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from matplotlib) (9.5.0)\n",
-      "Requirement already satisfied: cloudpickle in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from shap) (2.2.1)\n",
-      "Requirement already satisfied: pandas in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from shap) (1.5.3)\n",
-      "Requirement already satisfied: numba in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from shap) (0.56.4)\n",
-      "Requirement already satisfied: tqdm>4.25.0 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from shap) (4.65.0)\n",
-      "Requirement already satisfied: slicer==0.0.7 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from shap) (0.0.7)\n",
-      "Requirement already satisfied: six>=1.5 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from scikit-learn!=0.22.0->lightgbm) (3.1.0)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from scikit-learn!=0.22.0->lightgbm) (1.2.0)\n",
-      "Requirement already satisfied: llvmlite<0.40,>=0.39.0dev0 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from numba->shap) (0.39.1)\n",
-      "Requirement already satisfied: setuptools in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from numba->shap) (59.6.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages (from pandas->shap) (2023.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# !pip install lightgbm matplotlib shap"
+    "# !pip install lightgbm"
    ]
   },
   {
@@ -95,19 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "836d574d-eef9-4a0b-b238-81b16dc592fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/insatanic/_MyFolders/uptrain/uptrain-worktree/env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn import model_selection, metrics\n",
@@ -217,66 +174,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>853993</th>\n",
+       "      <th>148658</th>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.003664</td>\n",
+       "      <td>0.017124</td>\n",
        "      <td>2016</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12</td>\n",
-       "      <td>6</td>\n",
-       "      <td>13</td>\n",
-       "      <td>57</td>\n",
-       "      <td>54</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>45</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1156038</th>\n",
-       "      <td>2</td>\n",
+       "      <th>13628</th>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.011580</td>\n",
+       "      <td>0.062389</td>\n",
        "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>17</td>\n",
-       "      <td>33</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>725266</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.070952</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
        "      <td>5</td>\n",
-       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>38</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>537560</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.021329</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
        "      <td>19</td>\n",
-       "      <td>53</td>\n",
-       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         vendor_id  passenger_count  store_and_fwd_flag      dist  \\\n",
-       "853993           2                1                   0  0.003664   \n",
-       "1156038          2                1                   0  0.011580   \n",
-       "725266           2                1                   0  0.070952   \n",
+       "        vendor_id  passenger_count  store_and_fwd_flag      dist  pickup_year  \\\n",
+       "148658          2                1                   0  0.017124         2016   \n",
+       "13628           1                2                   0  0.062389         2016   \n",
+       "537560          2                1                   0  0.021329         2016   \n",
        "\n",
-       "         pickup_year  pickup_month  pickup_day  pickup_dow  pickup_hour  \\\n",
-       "853993          2016             6          12           6           13   \n",
-       "1156038         2016             1           8           4           17   \n",
-       "725266          2016             2           5           4           19   \n",
+       "        pickup_month  pickup_day  pickup_dow  pickup_hour  pickup_min  \\\n",
+       "148658             3           3           3           15          45   \n",
+       "13628              3          26           5           13          38   \n",
+       "537560             1          19           1           14          14   \n",
        "\n",
-       "         pickup_min  pickup_sec  \n",
-       "853993           57          54  \n",
-       "1156038          33          41  \n",
-       "725266           53          37  "
+       "        pickup_sec  \n",
+       "148658          14  \n",
+       "13628           10  \n",
+       "537560          46  "
       ]
      },
      "execution_count": 5,
@@ -344,8 +301,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Mean Percentage Error: 408.49 seconds\n",
-      "Training Mean Absolute Percentage Error: 71.90 %\n"
+      "Training Mean Percentage Error: 425.82 seconds\n",
+      "Training Mean Absolute Percentage Error: 73.26 %\n"
      ]
     }
    ],
@@ -513,6 +470,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Deleting the folder:  uptrain_smart_data\n",
+      "Deleting the folder:  uptrain_logs\n",
       "- checks:\n",
       "\t- type:\n",
       "\t\tMonitor.ACCURACY\n",
@@ -586,26 +545,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1ff86aef-d3bc-4474-a7c6-5e9dbe80cdd6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Drift detected with ADWIN at time: 127\n",
-      "\n",
-      "      👋 Welcome to Streamlit!\n",
-      "\n",
-      "      If you’d like to receive helpful onboarding emails, news, offers, promotions,\n",
-      "      and the occasional swag, please enter your email address below. Otherwise,\n",
-      "      leave this field blank.\n",
-      "\n",
-      "      Email:  "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 2000\n",
     "cols = list(X_test.columns)\n",
