--- a/examples/ride_time_estimation/run.ipynb
+++ b/examples/ride_time_estimation/run.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install lightgbm"
+    "# !pip install lightgbm matplotlib shap"
    ]
   },
   {
