make notebook use model_args

--- a/examples/reinforcement_learning_example/run.ipynb
+++ b/examples/reinforcement_learning_example/run.ipynb
@@ -167,90 +167,48 @@
     "        {\n",
     "            \"type\": uptrain.Visual.PLOT,\n",
     "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"DQNAgent\",\n",
+    "            \"y_feature_name\": \"reward\",\n",
     "            \"plot_name\": \"reward\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"DoubleDQNAgent\",\n",
-    "            \"plot_name\": \"reward\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"DoubleDuelingDQNAgent\",\n",
-    "            \"plot_name\": \"reward\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"DuelingDQNAgent\",\n",
-    "            \"plot_name\": \"reward\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
+    "            \"dashboard_name\": \"RL\",\n",
+    "            \"model_args\": [\n",
+    "                {\n",
+    "                    \"type\": uptrain.MeasurableType.INPUT_FEATURE,\n",
+    "                    \"feature_name\": \"model\",\n",
+    "                    \"allowed_values\": [agent.__name__ for agent in agent_classes]\n",
+    "                }\n",
+    "            ]\n",
     "        },\n",
     "        \n",
     "        # Mean Reward Plots (window size = 100)\n",
     "        {\n",
     "            \"type\": uptrain.Visual.PLOT,\n",
     "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"mean_DQNAgent\",\n",
+    "            \"y_feature_name\": \"mean\",\n",
     "            \"plot_name\": \"mean reward\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"mean_DoubleDQNAgent\",\n",
-    "            \"plot_name\": \"mean reward\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"mean_DoubleDuelingDQNAgent\",\n",
-    "            \"plot_name\": \"mean reward\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"mean_DuelingDQNAgent\",\n",
-    "            \"plot_name\": \"mean reward\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
+    "            \"dashboard_name\": \"RL\",\n",
+    "            \"model_args\": [\n",
+    "                {\n",
+    "                    \"type\": uptrain.MeasurableType.INPUT_FEATURE,\n",
+    "                    \"feature_name\": \"model\",\n",
+    "                    \"allowed_values\": [agent.__name__ for agent in agent_classes]\n",
+    "                }\n",
+    "            ]\n",
     "        },\n",
     "        \n",
     "        # Exploration-Exploitation Tradeoff Plots\n",
     "        {\n",
     "            \"type\": uptrain.Visual.PLOT,\n",
     "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"epsilon_DQNAgent\",\n",
-    "            \"plot_name\": \"epsilon\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"epsilon_DoubleDQNAgent\",\n",
-    "            \"plot_name\": \"epsilon\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"epsilon_DoubleDuelingDQNAgent\",\n",
-    "            \"plot_name\": \"epsilon\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"type\": uptrain.Visual.PLOT,\n",
-    "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
-    "            \"y_feature_name\": \"epsilon_DuelingDQNAgent\",\n",
-    "            \"plot_name\": \"epsilon\",\n",
-    "            \"dashboard_name\": \"RL\"\n",
+    "            \"y_feature_name\": \"epsilon\",\n",
+    "            \"plot_name\": \"epsilon-greedy\",\n",
+    "            \"dashboard_name\": \"RL\",\n",
+    "            \"model_args\": [\n",
+    "                {\n",
+    "                    \"type\": uptrain.MeasurableType.INPUT_FEATURE,\n",
+    "                    \"feature_name\": \"model\",\n",
+    "                    \"allowed_values\": [agent.__name__ for agent in agent_classes]\n",
+    "                }\n",
+    "            ]\n",
     "        },\n",
     "        \n",
     "    ],\n",
@@ -2395,9 +2353,10 @@
     "        avg_score.append(round(np.mean(scores[index][-100:]), 1))\n",
     "        eps.append(round(agent.epsilon, 3))\n",
     "        framework.log(inputs = {\n",
-    "            f\"{agent.__class__.__name__}\": [r_score[-1]],\n",
-    "            f\"mean_{agent.__class__.__name__}\": [avg_score[-1]],\n",
-    "            f\"epsilon_{agent.__class__.__name__}\": [eps[-1]]\n",
+    "            \"reward\": [r_score[-1]],\n",
+    "            \"mean\": [avg_score[-1]],\n",
+    "            \"epsilon\": [eps[-1]],\n",
+    "            \"model\": [agent.__class__.__name__]\n",
     "        })\n",
     "    print(\n",
     "        f\"episode {i:03d}\",\n",
